Добавил пайплайн запуска контейнеров через .sh файл. Декомпозировал проект на составные части. Настроил superset для корректного подключения к БД Postgresql и Redis. Добавил health check в контейнеры. Начал работу с Airflow

--- a/chat_bot_project/.gitignore
+++ b/chat_bot_project/.gitignore
@@ -5,6 +5,9 @@
 /__pycache__/
 
 # Private Files
-/Scripts/commands.sh
-/Scripts/private_file.py
-/Scripts/project.py
+Airflow/scripts/commands.sh
+Airflow/scripts/private_file.py
+Airflow/scripts/project.py
+
+# Airflow
+Airflow/logs
