--- a/chat_bot_project/Databases/Redis/docker-compose.yml
+++ b/chat_bot_project/Databases/Redis/docker-compose.yml
@@ -1,11 +1,18 @@
 services:
   redis:
     image: redis:latest
+    container_name: redis
     ports:
       - '6379:6379'
     restart: always
     networks:
       - redis_apps_network
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 30s
+      retries: 50
+      start_period: 30s
 
 networks:
   redis_apps_network:
