--- a/chat_bot_project/Superset/.env
+++ b/chat_bot_project/Superset/.env
@@ -1,12 +1,32 @@
-DATABASE_DB=superset
-DATABASE_HOST=db
-DATABASE_PASSWORD=superset
-DATABASE_USER=superset
-DATABASE_PORT=5432
-DATABASE_DIALECT=postgresql
+# Вывод на экран true
+PYTHONUNBUFFERED=1
 
+DEV_MODE=true
+
+# БД ПОСГРЕ
+DATABASE_PORT=5432
+DATABASE_NAME=postgresql
+DATABASE_DB=preprod_db
+DATABASE_USER=admin
+DATABASE_PASSWORD=admin
+DATABASE_HOST=postgres
+
+# БД РЕДИС
+REDIS_HOST=redis
+REDIS_PORT=6379
+
+# Мои либы
+#PYTHONPATH=/app/pythonLibs/
+
+FLASK_DEBUG=true
 SUPERSET_ENV=development
 SUPERSET_LOAD_EXAMPLES=yes
+CYPRESS_CONFIG=false
 SUPERSET_PORT=8088
-SUPERSET_SECRET_KEY=TEST_NON_DEV_SECRET
-SUPERSET_LOG_LEVEL=info
+
+SUPERSET_SECRET_KEY=TEST_SECRET_ABASHIN_EGOR
+
+ENABLE_PLAYWRIGHT=false
+PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true
+BUILD_SUPERSET_FRONTEND_IN_DOCKER=true
+SUPERSET_LOG_LEVEL=debug
