Тестирование Airflow. Написание простого ДАГа. Подключение к БД у Аирфлоу еще не настроено. Корректировка конфигов  PostgreSQL, Redis, Superset.

--- a/chat_bot_project/Airflow/.env
+++ b/chat_bot_project/Airflow/.env
@@ -1,2 +1,17 @@
+# Airflow
 AIRFLOW_UID=501
 AIRFLOW_GID=0
+AIRFLOW_VAR_CONFIG=/opt/airflow/config
+AIRFLOW_VAR_SCRIPTS=/opt/airflow/scripts
+
+# БД ПОСГРЕ
+DATABASE_PORT=5432
+DATABASE_DB=airflow
+DATABASE_USER=admin
+DATABASE_PASSWORD=admin
+DATABASE_HOST=postgres
+
+# БД РЕДИС
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_DB=2
