--- a/chat_bot_project/Superset/.env
+++ b/chat_bot_project/Superset/.env
@@ -6,7 +6,7 @@ DEV_MODE=true
 # БД ПОСГРЕ
 DATABASE_PORT=5432
 DATABASE_NAME=postgresql
-DATABASE_DB=preprod_db
+DATABASE_DB=superset
 DATABASE_USER=admin
 DATABASE_PASSWORD=admin
 DATABASE_HOST=postgres
