--- a/chat_bot_project/Airflow/docker-compose.yml
+++ b/chat_bot_project/Airflow/docker-compose.yml
@@ -50,13 +50,13 @@ x-airflow-common:
   # Comment the image line, place your Dockerfile in the directory where you placed the docker-compose.yaml
   # and uncomment the "build" line below, Then run `docker-compose build` to build the images.
   image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:2.10.4}
-  # build: .
+  build: .
   environment:
     &airflow-common-env
     AIRFLOW__CORE__EXECUTOR: CeleryExecutor
-    AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@postgres/airflow
-    AIRFLOW__CELERY__RESULT_BACKEND: db+postgresql://airflow:airflow@postgres/airflow
-    AIRFLOW__CELERY__BROKER_URL: redis://:@redis:6379/0
+    AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://${DATABASE_USER}:${DATABASE_PASSWORD}@${DATABASE_HOST}/${DATABASE_DB}
+    AIRFLOW__CELERY__RESULT_BACKEND: db+postgresql://${DATABASE_USER}:${DATABASE_PASSWORD}@${DATABASE_HOST}/${DATABASE_DB}
+    AIRFLOW__CELERY__BROKER_URL: redis://:@${REDIS_HOST}:${REDIS_PORT}/${REDIS_DB}
     AIRFLOW__CORE__FERNET_KEY: ''
     AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION: 'true'
     AIRFLOW__CORE__LOAD_EXAMPLES: 'true'
@@ -76,22 +76,16 @@ x-airflow-common:
     - ${AIRFLOW_PROJ_DIR:-.}/dags:/opt/airflow/dags
     - ${AIRFLOW_PROJ_DIR:-.}/logs:/opt/airflow/logs
     - ${AIRFLOW_PROJ_DIR:-.}/config:/opt/airflow/config
+    - ${AIRFLOW_PROJ_DIR:-.}/plugins:/opt/airflow/plugins
     - ${AIRFLOW_PROJ_DIR:-.}/scripts:/opt/airflow/scripts
   user: "${AIRFLOW_UID:-50000}:0"
-  # depends_on:
-  #   &airflow-common-depends-on
-  #   redis:
-  #     condition: service_healthy
-  #   postgres:
-  #     condition: service_healthy
 
 services:
-
   airflow-webserver:
     <<: *airflow-common
     command: webserver
     ports:
-      - "8081:8080"
+      - "8080:8080"
     healthcheck:
       test: ["CMD", "curl", "--fail", "http://localhost:8080/health"]
       interval: 30s
@@ -100,7 +94,6 @@ services:
       start_period: 30s
     restart: always
     depends_on:
-      #<<: *airflow-common-depends-on
       airflow-init:
         condition: service_completed_successfully
     networks:
@@ -117,7 +110,6 @@ services:
       start_period: 30s
     restart: always
     depends_on:
-      #<<: *airflow-common-depends-on
       airflow-init:
         condition: service_completed_successfully
     networks:
@@ -142,7 +134,6 @@ services:
       DUMB_INIT_SETSID: "0"
     restart: always
     depends_on:
-      #<<: *airflow-common-depends-on
       airflow-init:
         condition: service_completed_successfully
     networks:
@@ -159,7 +150,6 @@ services:
       start_period: 30s
     restart: always
     depends_on:
-      #<<: *airflow-common-depends-on
       airflow-init:
         condition: service_completed_successfully
     networks:
@@ -231,7 +221,6 @@ services:
     networks:
       - airflow_apps_network
 
-
   airflow-cli:
     <<: *airflow-common
     profiles:
@@ -265,7 +254,6 @@ services:
       start_period: 30s
     restart: always
     depends_on:
-      #<<: *airflow-common-depends-on
       airflow-init:
         condition: service_completed_successfully
     networks:
