--- a/chat_bot_project/Databases/PostgreSQL/docker-compose.yml
+++ b/chat_bot_project/Databases/PostgreSQL/docker-compose.yml
@@ -1,20 +1,20 @@
 services:
   postgres:
-    image: library/postgres:14
+    image: library/postgres:latest
     container_name: postgres
     volumes:
+      - ./init-scripts:/docker-entrypoint-initdb.d
       - postgres-volume:/var/lib/postgresql/data
-    environment:
-      POSTGRES_USER: admin
-      POSTGRES_PASSWORD: admin
-      POSTGRES_DB: preprod_db
+    env_file:
+      - path: ./.env
+        required: true
     ports:
       - '5432:5432'
     restart: always
     networks:
       - p_apps_network
     healthcheck:
-      test: ["CMD", "pg_isready", "-U", "airflow"]
+      test: ["CMD", "pg_isready", "-U", "admin", "-d", "telegram_bot_db"]
       interval: 10s
       retries: 5
       start_period: 5s
@@ -26,9 +26,9 @@ services:
       - pgadmin-volume:/var/lib/pgadmin
     ports:
       - '5050:80'
-    environment:
-      PGADMIN_DEFAULT_EMAIL: postgres@pg.com
-      PGADMIN_DEFAULT_PASSWORD: admin
+    env_file:
+      - path: ./.env
+        required: true
     depends_on:
       - postgres
     networks:
@@ -42,7 +42,9 @@ services:
   
 volumes:
   postgres-volume:
+    name: postgres-volume
   pgadmin-volume:
+    name: pgadmin-volume
 
 networks:
   p_apps_network:
