--- a/chat_bot_project/Superset/docker-compose.yml
+++ b/chat_bot_project/Superset/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   superset:
     build:
       context: .
-      dockerfile: dockerFile
+      dockerfile: DockerFile
     image: apache/superset:latest
     env_file:
       - path: ./.env
@@ -11,11 +11,11 @@ services:
     user: "root"
     restart: unless-stopped
     ports:
-      - 8080:8088
+      - 8081:8088
     volumes:
       - ./superset_config.py:/app/pythonpath/superset_config.py
       - ./superset_run_commands.sh:/app/superset_run_commands.sh
-      - C:\Users\My End_1ess C\Documents\Диплом\MyGithub\end1ess1\chat_bot_project\Databases\Redis\redis_db_mapping.py:/app/pythonpath/redis_db_mapping.py
+      - C:\Users\My End_1ess C\Documents\Диплом\MyGithub\end1ess1\chat_bot_project\Databases\Redis\redis_db_mapping.json:/app/pythonpath/redis_db_mapping.json
       - superset_home:/app/superset_home
     networks:
       - superset_apps_network
@@ -23,6 +23,7 @@ services:
 
 volumes:
   superset_home:
+    name: superset-volume
     external: false
 
 networks:
