--- a/chat_bot_project/Airflow/.env
+++ b/chat_bot_project/Airflow/.env
@@ -6,9 +6,9 @@ AIRFLOW_VAR_SCRIPTS=/opt/airflow/scripts
 
 # БД ПОСГРЕ
 DATABASE_PORT=5432
-DATABASE_DB=airflow
-DATABASE_USER=admin
-DATABASE_PASSWORD=admin
+DATABASE_DB=airflow_db
+DATABASE_USER=airflow_admin
+DATABASE_PASSWORD=airflow
 DATABASE_HOST=postgres
 
 # БД РЕДИС
