--- a/chat_bot_project/Superset/.env
+++ b/chat_bot_project/Superset/.env
@@ -6,9 +6,9 @@ DEV_MODE=true
 # БД ПОСГРЕ
 DATABASE_PORT=5432
 DATABASE_NAME=postgresql
-DATABASE_DB=superset
-DATABASE_USER=admin
-DATABASE_PASSWORD=admin
+DATABASE_DB=superset_db
+DATABASE_USER=superset_admin
+DATABASE_PASSWORD=superset
 DATABASE_HOST=postgres
 
 # БД РЕДИС
