--- a/chat_bot_project/Databases/PostgreSQL/docker-compose.yml
+++ b/chat_bot_project/Databases/PostgreSQL/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     networks:
       - p_apps_network
     healthcheck:
-      test: ["CMD", "pg_isready", "-U", "admin", "-d", "telegram_bot_db"]
+      test: ["CMD", "pg_isready", "-U", "super_user", "-d", "telegram_bot_db"]
       interval: 10s
       retries: 5
       start_period: 5s
