Настроены привилегии для подключения к бдшкам, подключен аирфлоу и суперсет к своим собственным бдшкам в посгре. сделана таблица для пользователей тг. Внесены мелкие правки в скрипты

--- a/chat_bot_project/Databases/Redis/redis_db_mapping.json
+++ b/chat_bot_project/Databases/Redis/redis_db_mapping.json
@@ -2,6 +2,7 @@
     "redis_db": {
         "postgres": "0",
         "superset": "1",
-        "airflow": "2"
+        "airflow": "2",
+        "telegram": "3"
     }
 }
