--- a/chat_bot_project/Airflow/scripts/.env
+++ b/chat_bot_project/Airflow/scripts/.env
@@ -4,3 +4,8 @@ DATABASE_DB=telegram_bot_db
 DATABASE_USER=telegram_bot_admin
 DATABASE_PASSWORD=telegram
 DATABASE_HOST=postgres
+
+# БД Редис
+REDIS_PORT=6379
+REDIS_DB=3 
+REDIS_HOST=redis
