--- a/chat_bot_project/.gitignore
+++ b/chat_bot_project/.gitignore
@@ -8,6 +8,8 @@
 Airflow/scripts/commands.sh
 Airflow/scripts/private_file.py
 Airflow/scripts/project.py
+Airflow/scripts/.env
+Airflow/scripts/__pycache__/
 
 # Airflow
 Airflow/.env
