Настроен полный пайплайн: Запуск БД, Суперсета, Аирфлоу, Бота. Логи с бота телеграм и скриптов пишутся в посгре. Внесены правки в конфиги

--- a/chat_bot_project/Airflow/scripts/.env
+++ b/chat_bot_project/Airflow/scripts/.env
@@ -1,11 +1,11 @@
 # БД ПОСГРЕ
 DATABASE_PORT=5432
 DATABASE_DB=telegram_bot_db
-DATABASE_USER=telegram_bot_admin
-DATABASE_PASSWORD=telegram
-DATABASE_HOST=postgres
+DATABASE_USER=super_user
+DATABASE_PASSWORD=super_user
+DATABASE_HOST=localhost
 
-# БД Редис
+# БД РЕДИС
+REDIS_HOST=localhost
 REDIS_PORT=6379
-REDIS_DB=3 
-REDIS_HOST=redis
+REDIS_DB=3
