--- a/chat_bot_project/Superset/.env
+++ b/chat_bot_project/Superset/.env
@@ -24,6 +24,9 @@ SUPERSET_LOAD_EXAMPLES=yes
 CYPRESS_CONFIG=false
 SUPERSET_PORT=8088
 
+SUPERSET_USER=admin
+SUPERSET_PASSWORD=admin
+
 SUPERSET_SECRET_KEY=TEST_SECRET_ABASHIN_EGOR
 
 ENABLE_PLAYWRIGHT=false
