Минорные правки. Добавил дашборд на Суперсет для модели. Экспортировал в виде папки, создав бэкап при поднятии контейнера

--- a/chat_bot_project/Superset/docker-compose.yml
+++ b/chat_bot_project/Superset/docker-compose.yml
@@ -13,6 +13,7 @@ services:
     ports:
       - 8081:8088
     volumes:
+      - ./model_dashboard:/app/superset_dasboards
       - ./superset_config.py:/app/pythonpath/superset_config.py
       - ./superset_run_commands.sh:/app/superset_run_commands.sh
       - C:\Users\My End_1ess C\Documents\Диплом\MyGithub\end1ess1\chat_bot_project\Databases\Redis\redis_db_mapping.json:/app/pythonpath/redis_db_mapping.json
