Внесены правки в скрипты. Добавлены документы для модели. Начал разбираться с эмбеддингами

--- a/chat_bot_project/Airflow/scripts/.env
+++ b/chat_bot_project/Airflow/scripts/.env
@@ -9,3 +9,7 @@ DATABASE_HOST=localhost
 REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_DB=3
+
+# OTHER
+MODEL_VERSION = 'Gemma-2-9B-It-SPPO-Iter3-Q2_K'
+LOG_TABLE_NAME = 'llm_logs'
