Минорная правка. Загрузка txt документов

--- a/chat_bot_project/Airflow/scripts/.env
+++ b/chat_bot_project/Airflow/scripts/.env
@@ -11,5 +11,7 @@ REDIS_PORT=6379
 REDIS_DB=3
 
 # OTHER
-MODEL_VERSION = 'Gemma-2-9B-It-SPPO-Iter3-Q2_K'
-LOG_TABLE_NAME = 'llm_logs'
+MODEL_VERSION=Gemma-2-9B-It-SPPO-Iter3-Q2_K
+LOG_TABLE_NAME=llm_logs
+TXT_DIR="C:\Users\My End_1ess C\Documents\Диплом\MyGithub\end1ess1\chat_bot_project\Airflow\document_for_llm"
+URL='http://192.168.0.156:5000/embeddings'
