Биг Рефакторинг кода, модель уже отвечает на основе документов

--- a/chat_bot_project/Airflow/scripts/.env
+++ b/chat_bot_project/Airflow/scripts/.env
@@ -11,8 +11,19 @@ REDIS_PORT=6379
 REDIS_DB=3
 
 # OTHER
-MODEL_VERSION=Gemma-2-9B-It-SPPO-Iter3-Q2_K
+MODEL_VERSION=API_MODEL_TEST_VERSION
 LOG_TABLE_NAME=llm_logs
 TXT_DIR="C:\Users\My End_1ess C\Documents\Диплом\MyGithub\end1ess1\chat_bot_project\Airflow\document_for_llm"
 URL='http://192.168.0.156:5000/embeddings'
 LIBS_PATH='C:\Users\My End_1ess C\Documents\Диплом\MyGithub\end1ess1\chat_bot_project\Airflow\libs'
+
+# TELEGRAM
+API_TOKEN='7925929331:AAGyl4YhNf0eEVBFSMRBoZGeu_Jhd99O2sI'
+
+# LOCAL MODEL CONFIG
+LLAMA_SERVER_PATH="path/to/llama-server.exe"
+MODEL_PATH="../LLM/Gemma-2-9B-It-SPPO-Iter3-Q2_K.gguf"
+HOST="192.168.0.156"
+PORT=5000 
+NGL=100  # Количество слоев GPU для ускорения
+CONTEXT_SIZE=2048
