--- a/chat_bot_project/Databases/Milvus/docker-compose.yml
+++ b/chat_bot_project/Databases/Milvus/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - milvus_apps_network
     volumes:
       - etcd_data:/etcd
+      - C:\Users\My End_1ess C\Documents\Диплом\MyGithub\end1ess1\chat_bot_project\Databases\Milvus\Milvus_volumes:/etcd
     healthcheck:
       test: ["CMD", "etcdctl", "endpoint", "health"]
       interval: 5s
@@ -32,6 +33,7 @@ services:
       - milvus_apps_network
     volumes:
       - milvus_data:/var/lib/milvus
+      - C:\Users\My End_1ess C\Documents\Диплом\MyGithub\end1ess1\chat_bot_project\Databases\Milvus\Milvus_volumes:/var/lib/milvus
     depends_on:
       etcd:
         condition: service_healthy
