Пробовал Через Airflow создать таски по поднятию других сервисов (Milvus / Superser etc.). Понял, что внутри контейнера другой контейнер не запустить параллельно, только внутри. Буду думать, как использовать Airflow В проекте

--- a/chat_bot_project/Airflow/.env
+++ b/chat_bot_project/Airflow/.env
@@ -3,6 +3,10 @@ AIRFLOW_UID=501
 AIRFLOW_GID=0
 AIRFLOW_VAR_CONFIG=/opt/airflow/config
 AIRFLOW_VAR_SCRIPTS=/opt/airflow/scripts
+AIRFLOW_VAR_DAGS=/opt/airflow/dags
+AIRFLOW_VAR_DOCUMENTS=/opt/airflow/documents
+AIRFLOW_VAR_LIBS=/opt/airflow/libs
+AIRFLOW_VAR_LOGS=/opt/airflow/logs
 
 # БД ПОСГРЕ
 DATABASE_PORT=5432
