--- a/chat_bot_project/Airflow/DockerFile
+++ b/chat_bot_project/Airflow/DockerFile
@@ -1,5 +1,11 @@
 FROM apache/airflow:2.10.4
 
-COPY requirements.txt /opt/airflow/scripts/requirements.txt
+# USER root
+# RUN apt-get update && apt-get install -y --no-install-recommends \
+#     libpq-dev gcc python3-dev \
+#     && rm -rf /var/lib/apt/lists/*
 
-RUN pip install --no-cache-dir -r /opt/airflow/scripts/requirements.txt
+# COPY requirements.txt /opt/airflow/scripts/requirements.txt
+
+# USER airflow
+# RUN pip install --no-cache-dir -r /opt/airflow/scripts/requirements.txt
