--- a/chat_bot_project/Airflow/docker-compose.yml
+++ b/chat_bot_project/Airflow/docker-compose.yml
@@ -73,11 +73,12 @@ x-airflow-common:
     # If you want to use it, outcomment it and replace airflow.cfg with the name of your config file
     # AIRFLOW_CONFIG: '/opt/airflow/config/airflow.cfg'
   volumes:
-    - ${AIRFLOW_PROJ_DIR:-.}/dags:/opt/airflow/dags
+    - ${AIRFLOW_PROJ_DIR:-.}/Config:/opt/airflow/config
+    - ${AIRFLOW_PROJ_DIR:-.}/Dags:/opt/airflow/dags
+    - ${AIRFLOW_PROJ_DIR:-.}/Documents:/opt/airflow/documents
+    - ${AIRFLOW_PROJ_DIR:-.}/Libs:/opt/airflow/libs
     - ${AIRFLOW_PROJ_DIR:-.}/logs:/opt/airflow/logs
-    - ${AIRFLOW_PROJ_DIR:-.}/config:/opt/airflow/config
-    - ${AIRFLOW_PROJ_DIR:-.}/libs:/opt/airflow/libs
-    - ${AIRFLOW_PROJ_DIR:-.}/scripts:/opt/airflow/scripts
+    - ${AIRFLOW_PROJ_DIR:-.}/Scripts:/opt/airflow/scripts
   user: "${AIRFLOW_UID:-50000}:0"
 
 services:
