Пайплайн сервисов готов. Все сервисы запускаются друг за другом через Airflow и работают в штатном режиме

--- a/chat_bot_project/.gitignore
+++ b/chat_bot_project/.gitignore
@@ -20,5 +20,9 @@ Airflow/airflow-webserver.pid
 Airflow/airflow.cfg
 Airflow/bashrc
 
+
+chat_bot_project/Databases/Milvus/Milvus_volumes
+
+
 # Superset
 Superset/.env
