--- a/chat_bot_project/Airflow/scripts/.env
+++ b/chat_bot_project/Airflow/scripts/.env
@@ -15,7 +15,7 @@ MODEL_VERSION=API_MODEL_TEST_VERSION
 LOG_TABLE_NAME=llm_logs
 TXT_DIR="C:\Users\My End_1ess C\Documents\Диплом\MyGithub\end1ess1\chat_bot_project\Airflow\document_for_llm"
 URL='http://192.168.0.156:5000/embeddings'
-LIBS_PATH='C:\Users\My End_1ess C\Documents\Диплом\MyGithub\end1ess1\chat_bot_project\Airflow\libs'
+LIBS_PATH='/mnt/c/Users/My End_1ess C/Documents/Диплом/MyGithub/end1ess1/chat_bot_project/Airflow/Libs'
 
 # TELEGRAM
 API_TOKEN='7925929331:AAGyl4YhNf0eEVBFSMRBoZGeu_Jhd99O2sI'
