--- a/chat_bot_project/Superset/.env
+++ b/chat_bot_project/Superset/.env
@@ -16,7 +16,7 @@ REDIS_HOST=redis
 REDIS_PORT=6379
 
 # Волумс
-REDIS_JSON=C:\Users\My End_1ess C\Documents\Диплом\MyGithub\end1ess1\chat_bot_project\Airflow\Databases\Redis\redis_db_mapping.json
+REDIS_JSON=/mnt/c/Users/My End_1ess C/Documents/Диплом/MyGithub/end1ess1/chat_bot_project/Databases/Redis/redis_db_mapping.json
 
 # Мои либы
 #PYTHONPATH=/app/pythonLibs/
