Переписывание скриптов к продакшн виду. Оптимизация скриптов. Добавление к таскам в Аирфлоу сенсоров

--- a/chat_bot_project/Airflow/scripts/.env
+++ b/chat_bot_project/Airflow/scripts/.env
@@ -16,7 +16,9 @@ LOG_TABLE_NAME=llm_logs
 TXT_DIR="C:\Users\My End_1ess C\Documents\Диплом\MyGithub\end1ess1\chat_bot_project\Airflow\document_for_llm"
 URL='http://192.168.0.156:5000/embeddings'
 LIBS_PATH='/mnt/c/Users/My End_1ess C/Documents/Диплом/MyGithub/end1ess1/chat_bot_project/Airflow/Libs'
-
+LIBS_PATH_LOCAL="C:\Users\My End_1ess C\Documents\Диплом\MyGithub\end1ess1\chat_bot_project\Airflow\Libs"
+DOCS_FOLDER_LOCAL="C:\Users\My End_1ess C\Documents\Диплом\MyGithub\end1ess1\chat_bot_project\Airflow\Documents\preprocessing_documents"
+DOCS_FOLDER='/mnt/c/Users/My End_1ess C/Documents/Диплом/MyGithub/end1ess1/chat_bot_project/Airflow/Documents/preprocessing_documents'
 # TELEGRAM
 API_TOKEN='7925929331:AAGyl4YhNf0eEVBFSMRBoZGeu_Jhd99O2sI'
 
