--- a/chat_bot_project/Airflow/config/chat_bot_dag_params.yaml
+++ b/chat_bot_project/Airflow/config/chat_bot_dag_params.yaml
@@ -21,9 +21,9 @@ dag_kwargs:
   default_args:
     start_date: "2025-01-01"
     retry_delay: 120
-    owner: abas
+    owner: abashin_egor
     retries: 3
-    email_on_failure: true
+    email_on_failure: false
     email: 
       - e_abashin@inbox.ru
       - ewreht@inbox.ru
