Распараллелил подгрузку в векторную бд, добавил описание для дага, переписал логику дага, добавил таску с подгрузкой и отправкой уведомления + косметические правки в некоторых скриптах

--- a/chat_bot_project/Airflow/Config/start_telegram_chat_bot_dag_params.yaml
+++ b/chat_bot_project/Airflow/Config/start_telegram_chat_bot_dag_params.yaml
@@ -15,7 +15,7 @@ dag_vars:
     - secrets_handler.py
 
 dag_kwargs:
-  description: Модельный пайплайн для продакшна
+  description: Полный пайплайн запуска Телеграм Бота
   schedule_interval: 0 4 * * *
   catchup: false
   default_args:
