--- a/chat_bot_project/Databases/Milvus/.env
+++ b/chat_bot_project/Databases/Milvus/.env
@@ -1,1 +1,2 @@
-VOLUME_PATH=C:\Users\My End_1ess C\Documents\Диплом\MyGithub\end1ess1\chat_bot_project\Databases\Milvus\Milvus_volumes
+VOLUME_PATH_LOCAL=C:\Users\My End_1ess C\Documents\Диплом\MyGithub\end1ess1\chat_bot_project\Databases\Milvus\Milvus_volumes
+VOLUME_PATH=/mnt/c/Users/My End_1ess C/Documents/Диплом/MyGithub/end1ess1/chat_bot_project/Databases/Milvus/Milvus_volumes
