--- a/chat_bot_project/Airflow/scripts/.env
+++ b/chat_bot_project/Airflow/scripts/.env
@@ -19,6 +19,7 @@ LIBS_PATH='/mnt/c/Users/My End_1ess C/Documents/Диплом/MyGithub/end1ess1/c
 LIBS_PATH_LOCAL="C:\Users\My End_1ess C\Documents\Диплом\MyGithub\end1ess1\chat_bot_project\Airflow\Libs"
 DOCS_FOLDER_LOCAL="C:\Users\My End_1ess C\Documents\Диплом\MyGithub\end1ess1\chat_bot_project\Airflow\Documents\preprocessing_documents"
 DOCS_FOLDER='/mnt/c/Users/My End_1ess C/Documents/Диплом/MyGithub/end1ess1/chat_bot_project/Airflow/Documents/preprocessing_documents'
+
 # TELEGRAM
 API_TOKEN='7925929331:AAGyl4YhNf0eEVBFSMRBoZGeu_Jhd99O2sI'
 
@@ -29,3 +30,6 @@ HOST="192.168.0.156"
 PORT=5000 
 NGL=100  # Количество слоев GPU для ускорения
 CONTEXT_SIZE=2048
+
+# Reranker
+RERANKER_MODEL="cross-encoder/ms-marco-MiniLM-L-6-v2"
