--- a/chat_bot_project/Databases/Milvus/docker-compose.yml
+++ b/chat_bot_project/Databases/Milvus/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - milvus_apps_network
     volumes:
       - etcd_data:/etcd
-      - ${VOLUME_PATH}:/etcd
+      - ${VOLUME_PATH_LOCAL}:/etcd
     healthcheck:
       test: [ "CMD", "etcdctl", "endpoint", "health" ]
       interval: 5s
